2005-04-28  Davide Viti  <zinosat@tiscali.it>

	* Wordlists aren't built anymore at each run. 
	 "build_wls.sh" triggers a complete rebuild of all wls
	
2005-04-19  Davide Viti  <zinosat@tiscali.it>

	* New version of the spellchecker has just been committed: the
	list of changes would be too long

2005-02-11  Davide Viti  <zinosat@tiscali.it>

	* check_dit.sh: "check_var.pl" is now run with -s option

2005-02-10  Davide Viti  <zinosat@tiscali.it>

	* check_dit.sh: added ".htaccess" in "nozip" dir so that files are opened using the right encoding

2005-02-09  Davide Viti  <zinosat@tiscali.it>

	* check_dit.sh: Use of Denis Barbier's "check_var.pl" to detect wrong variables in strings

	* index_template.html: Added a few lines telling about the table

	* build_index.sh: "pt_BR" was always treated as "pt"
	Added "Suspect vars" column

2005-02-02  Davide Viti  <zinosat@tiscali.it>

	* build_index.sh: added a column, for each language,
	containing the dictionary utilized

2005-01-27  Davide Viti  <zinosat@tiscali.it>

	* check_dit.sh: master files are spellchecked only when
	necessary. This fixes the wrong unknown words counts and reduces
	the size of most ${LANG}_all.txt files.

2005-01-25  Davide Viti  <zinosat@tiscali.it>

	* diff_stats.sh: fixed bug with delta=-1

	* lang2dict.txt: Norwegian dictionary was changed from "no" to "nb" which is the new code.

2005-01-24  Davide Viti  <zinosat@tiscali.it>

	* "Plural-Forms:", "X-Poedit-Language:", "X-Poedit-Country:" strings are filtered out

	* l10n-spellcheck.sh : more fixes in order to deal correctly with symlinks. "latest" and "previous" now use absolute paths.

	* msgid_extract.awk: awk script used to extract "msgid" entries from "templates.pot"

	* build_index.sh : index.html displays the date in UTC

2005-01-20  Davide Viti  <zinosat@tiscali.it>

	* l10n-spellcheck.sh: the name of the dir with all this stuff is not bound
	to be called "~/l10n-spellcheck" anymore. Removing all the ugly "cd" makes