@@ -4,9 +4,11 @@ be
 bg,bg
 bs
 ca,ca
-cs,cs
+#cs,cs
+cs
 cy,cy
-da,da
+#da,da
+da
 de,de
 el,el
 eo
@@ -18,12 +20,15 @@ fa
 fi
 fr,fr
 ga,ga
-gl,gl
+#gl,gl
+gl
 he
 hi
-hr,hr
+#hr,hr
+hr
 hu
-id,id
+#id,id
+id
 it,it
 ja
 ko
@@ -37,9 +42,12 @@ nn,nn
 pa_IN
 pl,pl
 pt,pt
-pt_BR,pt-br
-ro,ro
-ru,ru
+#pt_BR,pt-br
+pt_BR
+#ro,ro
+ro
+#ru,ru
+ru
 se
 sk,sk
 sl,sl
