@@ -1,3 +1,11 @@
+2005-09-13  Davide Viti  <zinosat@tiscali.it>
+
+	* First tag for the spellchecker created by fjp via:
+	svn cp svn+ssh://svn.debian.org/svn/d-i/trunk/scripts/l10n/l10n-spellcheck svn+ssh://svn.debian.org/svn/d-i/tags/scripts/l10n/l10n-spellcheck/20050913 -m "Tag current version of spellchecking scripts (20050913)"
+
+	Now developement can move on as to use the sarge version of
+	aspell on Alioth which will probably break things for a while
+	
 2005-04-28  Davide Viti  <zinosat@tiscali.it>
 
 	* Wordlists aren't built anymore at each run. 
